--- a/src/components/markdown-styles.module.css
+++ b/src/components/markdown-styles.module.css
@@ -12,11 +12,11 @@
 }
 .markdown pre {
   white-space: pre;
-  overflow-x: scroll;
-  padding: 0.5rem;
-  margin: 0.5rem;
-  color: #fff;
-  background: #000;
+  overflow-x: auto;
+  padding: 1rem;
+  margin: 0rem;
+  color: #000;
+  background-color: #dfe6e9;
 }
 .markdown h2 {
   @apply text-3xl mt-12 mb-4 leading-snug;
