--- a/src/components/markdown-styles.module.css
+++ b/src/components/markdown-styles.module.css
@@ -27,6 +27,9 @@
 .markdown img {
   margin-left:5rem;
 }
+.markdown h1 {
+  @apply text-4xl mt-12 mb-4 leading-snug;
+}
 .markdown h2 {
   @apply text-3xl mt-12 mb-4 leading-snug;
 }
